Adds dummy page to demo and refactors config and styles for different layouts

--- a/toolkits/global/packages/global-ratings-survey/demo/main.scss
+++ b/toolkits/global/packages/global-ratings-survey/demo/main.scss
@@ -10,4 +10,5 @@
 
 // Component SCSS
 @import '../scss/00-tokens/default.tokens.scss';
+@import './scss/demo-page-layout';
 @import '../scss/50-components/ratings-survey';
