Improves js and adds logic to only allow permissible user journey values

--- a/toolkits/global/packages/global-ratings-survey/demo/index.hbs
+++ b/toolkits/global/packages/global-ratings-survey/demo/index.hbs
@@ -23,7 +23,7 @@
 			<div class="c-page-layout__sidebar c-page-layout__container">
 				<h2>Sidebar content</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam porta, nunc vel dignissim pulvinar, turpis sem sodales nibh, sed tincidunt quam dui ac lectus. Fusce tempor tempor elit, a finibus tellus vulputate non. In at felis vitae urna vestibulum gravida. Nam sed justo massa. Sed nec facilisis sem, sed eleifend.</p>
-				<p>Sed euismod libero in est dignissim placerat. Cras in ipsum sit amet diam malesuada convallis hendrerit vel tortor. Praesent lorem quam, ultrices vitae volutpat vitae, imperdiet eget quam. Donec sit amet pretium mauris. Sed ullamcorper risus eu cursus dictum. Nunc vestibulum congue auctor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Aenean efficitur turpis non metus placerat, sed tempor est commodo. Etiam facilisis, sapien sed ultrices molestie, dui felis facilisis metus, non posuere ex est vitae nisl. Sed aliquam ipsum eget tortor pulvinar auctor.</p>
+				<p>Sed euismod libero in est dignissim placerat. Cras in ipsum sit amet diam malesuada convallis hendrerit vel tortor.</p>
 				{{#with ratingsSurveyData1}}
 					{{> ratingsSurvey }}
 				{{/with}}
