--- a/toolkits/global/packages/global-ratings-survey/demo/index.hbs
+++ b/toolkits/global/packages/global-ratings-survey/demo/index.hbs
@@ -1,5 +1,5 @@
 <h1>Global Rating Survey Demo</h1>
-<p>Below is a dummy page that demonstrates the supported layouts for this component:</p>
+<p>Below is a dummy page that demonstrates the page locations this component was designed for:</p>
 <div class="c-page-layout">
 	<div class="c-page-layout__header c-page-layout__container">
 		<header>
@@ -14,11 +14,9 @@
 				<p>Donec commodo placerat turpis, et aliquet neque aliquet id. Maecenas nibh libero, tristique ornare iaculis non, placerat a urna. Nulla eu pharetra ex. Nunc auctor sem et ligula imperdiet tincidunt. Donec ut neque posuere, tempus justo quis, iaculis neque. Pellentesque venenatis sapien eu quam tincidunt pretium. Ut sapien turpis, semper a urna quis, pulvinar eleifend lectus. Nulla sed diam molestie, mattis nibh volutpat, ultricies lectus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Duis ut ultricies nunc. Proin sed imperdiet nunc, non blandit turpis. Quisque eget nisi eget risus fringilla facilisis sit amet vitae odio.</p>
 				<p>Aliquam sed fermentum dui. Vestibulum vitae iaculis sem. Praesent porta tellus nibh. Aenean at ex id enim varius tincidunt. Etiam mi risus, ornare commodo augue vel, varius tempor neque. Mauris eget lectus imperdiet, sagittis mauris id, rutrum est. Nam eu aliquet ligula. Integer venenatis quam eget scelerisque finibus. Integer maximus massa ac mauris mattis elementum. Nulla a sagittis nisi. Suspendisse ac magna bibendum, bibendum ex a, bibendum neque. Integer ac venenatis quam, vel volutpat tellus. Phasellus dictum nunc in metus placerat, vel rutrum nibh sollicitudin. Duis vel scelerisque sapien, vitae molestie odio.</p>
 				<p>Vestibulum risus enim, rutrum vitae leo vel, luctus congue odio. Nam felis massa, volutpat sit amet sodales id, mattis quis dolor. Fusce feugiat diam vitae libero dapibus, ac suscipit velit bibendum. Praesent sodales ante justo, in dapibus mauris rhoncus efficitur. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Integer eu consectetur ante, id sagittis metus. Integer at fringilla mi, non suscipit velit.</p>
-				<div style="display: flex; justify-content: center; padding: 16px;">
-					{{#with ratingsSurveyData2}}
-						{{> ratingsSurvey }}
-					{{/with}}
-				</div>
+				{{#with ratingsSurveyData2}}
+					{{> ratingsSurvey }}
+				{{/with}}
 			</div>
 			<div class="c-page-layout__sidebar c-page-layout__container">
 				<h2>Sidebar content</h2>
@@ -30,11 +28,9 @@
 			</div>
 		</div>
 	</div>
-	<div style="display: flex; justify-content: center; padding: 16px; border: 1px dashed #ccc;">
-		{{#with ratingsSurveyData3}}
-			{{> ratingsSurvey }}
-		{{/with}}
-	</div>
+	{{#with ratingsSurveyData3}}
+		{{> ratingsSurvey }}
+	{{/with}}
 	<div class="c-page-layout__footer c-page-layout__container">
 		<footer>
 			<h2>Footer</h2>
