disabled attr on options

--- a/toolkits/global/packages/global-forms/view/fields/globalFormSelect.hbs
+++ b/toolkits/global/packages/global-forms/view/fields/globalFormSelect.hbs
@@ -11,6 +11,7 @@
 			<option
 				value="{{value}}"
 				{{#if selected}} selected{{/if}}
+				{{#if disabled}} disabled{{/if}}
 			>
 				{{label}}
 			</option>
