--- a/toolkits/global/packages/global-ratings-survey/view/ratingsSurvey.hbs
+++ b/toolkits/global/packages/global-ratings-survey/view/ratingsSurvey.hbs
@@ -14,7 +14,7 @@
 					<p>{{submitMessageText}}</p>
 				</div>
 				{{#if questionUrl}}
-					<a href="{{questionUrl}}?id={{id}}" target="_blank">{{questionText}} (open in a new tab)</a>
+					<a href="{{questionUrl}}?id={{id}}" target="_blank">{{questionText}} (opens in a new tab)</a>
 				{{/if}}
 			</div>
 		</form>
