--- a/toolkits/global/packages/global-ratings-survey/demo/main.scss
+++ b/toolkits/global/packages/global-ratings-survey/demo/main.scss
@@ -1,8 +1,7 @@
 @charset "UTF-8";
 
-@import '../node_modules/@springernature/brand-context/nature/scss/core.scss';
-@import '../node_modules/@springernature/brand-context/nature/scss/enhanced.scss';
-@import '../node_modules/@springernature/brand-context/default/scss/60-utilities/hiding.scss';
+@import '../node_modules/@springernature/brand-context/springernature/scss/core.scss';
+@import '../node_modules/@springernature/brand-context/springernature/scss/enhanced.scss';
 
 // Global Forms SCSS
 @import '../node_modules/@springernature/global-forms/scss/00-tokens/default.tokens.scss';
@@ -12,3 +11,7 @@
 @import '../scss/00-tokens/default.tokens.scss';
 @import './scss/demo-page-layout';
 @import '../scss/50-components/ratings-survey';
+
+// Utility SCSS
+@import '../node_modules/@springernature/brand-context/default/scss/60-utilities/hiding.scss';
+@import '../node_modules/@springernature/brand-context/default/scss/60-utilities/spacing.scss';
