--- a/toolkits/global/packages/global-ratings-survey/demo/main.scss
+++ b/toolkits/global/packages/global-ratings-survey/demo/main.scss
@@ -9,9 +9,10 @@
 
 // Component SCSS
 @import '../scss/00-tokens/default.tokens.scss';
+@import '../scss/30-mixins/ratings-survey-button';
 @import './scss/demo-page-layout';
 @import '../scss/50-components/ratings-survey';
 
-// Utility SCSS
+// Global Utility SCSS
 @import '../node_modules/@springernature/brand-context/default/scss/60-utilities/hiding.scss';
 @import '../node_modules/@springernature/brand-context/default/scss/60-utilities/spacing.scss';
