move default abstracts import into brand abstracts file

--- a/context/brand-context/springer/scss/abstracts.scss
+++ b/context/brand-context/springer/scss/abstracts.scss
@@ -4,6 +4,9 @@
  * These files don’t output any CSS when compiled
  */
 
+// Default setting, functions, mixins
+@import '../../default/scss/abstracts';
+
 // Design Tokens need to be imported first
 @import '00-tokens/';
 
