--- a/toolkits/global/packages/global-ratings-survey/scss/00-tokens/_default.tokens.scss
+++ b/toolkits/global/packages/global-ratings-survey/scss/00-tokens/_default.tokens.scss
@@ -1,10 +1,11 @@
-// Generated on 9/28/2022, 1:49:56 PM
+// Generated on 9/30/2022, 3:37:22 PM
 // Source: design-tokens/componenets/global/global-ratings-survey/default.json
 // DO NOT edit directly
 
 $global-ratings-survey-container-padding: 1rem;
+$global-ratings-survey-error-margin: .5rem;
 $global-ratings-survey-font-size: 1rem;
-$global-ratings-survey-heading-margin: 1rem;
+$global-ratings-survey-heading-margin: .5rem;
 $global-ratings-survey-icon-margin: .5rem;
 $global-ratings-survey-icon-size: 1.5rem;
 $global-ratings-survey-link-margin: .5rem;
