--- a/toolkits/global/packages/global-ratings-survey/scss/50-components/_ratings-survey.scss
+++ b/toolkits/global/packages/global-ratings-survey/scss/50-components/_ratings-survey.scss
@@ -44,6 +44,7 @@
 
 .c-ratings-survey .c-forms__error {
 	display: none;
+	margin-bottom: $global-ratings-survey-error-margin;
 }
 
 .c-ratings-survey--show-error .c-forms__error {
