inline fields support

--- a/toolkits/global/packages/global-forms/demo/main.scss
+++ b/toolkits/global/packages/global-forms/demo/main.scss
@@ -4,6 +4,7 @@
 @import '../node_modules/@springernature/brand-context/nature/scss/enhanced.scss';
 @import '../node_modules/@springernature/brand-context/default/scss/60-utilities/spacing.scss';
 @import '../node_modules/@springernature/brand-context/default/scss/60-utilities/buttons.scss';
+@import '../node_modules/@springernature/brand-context/default/scss/60-utilities/hiding.scss';
 
 // component SCSS
 @import '../scss/00-tokens/default.tokens.scss';
