--- a/toolkits/global/packages/global-forms/view/globalFormLabel.hbs
+++ b/toolkits/global/packages/global-forms/view/globalFormLabel.hbs
@@ -1,4 +1,4 @@
-<label for="{{id}}" class="c-forms__label">
+<label for="{{id}}" class="c-forms__label{{#if hideLabel}} u-visually-hidden{{/if}}">
 	{{label}}
 	{{#if optional}}
 		{{#if optionalSuffix}}
