--- a/toolkits/global/packages/global-forms/view/globalFormField.hbs
+++ b/toolkits/global/packages/global-forms/view/globalFormField.hbs
@@ -1,3 +1,3 @@
-<div class="c-forms__field"{{#if hidden}} hidden{{/if}}>
+<div class="c-forms__field c-forms__field--{{template}}"{{#if hidden}} hidden{{/if}}>
 	{{> (lookup . 'template')}}
 </div>
