Apply dash styles using ::marker instead of list-style-type: string to have more control over appearance

--- a/context/brand-context/default/scss/60-utilities/lists.scss
+++ b/context/brand-context/default/scss/60-utilities/lists.scss
@@ -6,8 +6,10 @@
 	list-style-type: disc;
 }
 
-.u-list-style-dash {
-	list-style-type: '- ';
+.u-list-style-dash > ::marker {
+	content: '– ';
+	font-size: 1.2em;
+	line-height: 1;
 }
 
 .u-list-style-none {
