Adds more styles and uses more token generated variables to define style values

--- a/toolkits/global/packages/global-ratings-survey/scss/00-tokens/_default.tokens.scss
+++ b/toolkits/global/packages/global-ratings-survey/scss/00-tokens/_default.tokens.scss
@@ -1,11 +1,15 @@
-// Generated on 9/30/2022, 3:37:22 PM
+// Generated on 10/5/2022, 2:08:32 PM
 // Source: design-tokens/componenets/global/global-ratings-survey/default.json
 // DO NOT edit directly
 
+$global-ratings-survey-container-background-color: #f3f3f3;
 $global-ratings-survey-container-padding: 1rem;
 $global-ratings-survey-error-margin: .5rem;
-$global-ratings-survey-font-size: 1rem;
-$global-ratings-survey-heading-margin: .5rem;
+$global-ratings-survey-heading-font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
+$global-ratings-survey-heading-font-size: 1rem;
+$global-ratings-survey-heading-font-weight: 700;
+$global-ratings-survey-heading-margin: 1rem;
 $global-ratings-survey-icon-margin: .5rem;
 $global-ratings-survey-icon-size: 1.5rem;
+$global-ratings-survey-line-height: 1.4;
 $global-ratings-survey-link-margin: .5rem;
