--- a/toolkits/global/packages/global-ratings-survey/scss/50-components/_ratings-survey.scss
+++ b/toolkits/global/packages/global-ratings-survey/scss/50-components/_ratings-survey.scss
@@ -1,6 +1,6 @@
 .c-ratings-survey {
-	font-size: $global-ratings-survey-font-size;
 	padding: $global-ratings-survey-container-padding;
+	background-color: $global-ratings-survey-container-background-color;
 	overflow: hidden;
 }
 
@@ -11,6 +11,10 @@
 
 .c-ratings-survey__heading {
 	margin-bottom: $global-ratings-survey-heading-margin;
+	font-size: $global-ratings-survey-heading-font-size;
+	font-family: $global-ratings-survey-heading-font-family;
+	line-height: $global-ratings-survey-line-height;
+	font-weight: $global-ratings-survey-heading-font-weight;
 }
 
 .c-ratings-survey__submit-message div {
@@ -27,7 +31,7 @@
 
 .c-ratings-survey__submit-message p {
 	margin: 0;
-	line-height: 1.4;
+	line-height: $global-ratings-survey-line-height;
 }
 
 .c-ratings-survey__button {
@@ -40,15 +44,6 @@
 	margin-top: $global-ratings-survey-link-margin;
 	// TODO: Remove this once we apply underline from default brand context
 	text-decoration: underline;
-}
-
-.c-ratings-survey .c-forms__error {
-	display: none;
-	margin-bottom: $global-ratings-survey-error-margin;
-}
-
-.c-ratings-survey--show-error .c-forms__error {
-	display: flex;
 }
 
 .c-ratings-survey__visually-hidden,
@@ -64,8 +59,35 @@
 
 /* Override Global Forms Styles */
 .c-ratings-survey .c-forms__label--pictographic-radio svg {
-	width: 2rem;
-	height: 2rem;
+	width: 1.3rem;
+	height: 1.3rem;
+	padding: 0.3rem;
+	border-radius: 2px;
+}
+
+.c-ratings-survey .c-forms__pictographic-radios {
+	gap: 0.5rem;
+	justify-content: center;
+}
+
+.c-ratings-survey .c-forms__label {
+	font-size: 0.6rem;
+}
+
+@include media-query('sm') {
+	.c-ratings-survey .c-forms__label--pictographic-radio svg {
+		width: 2rem;
+		height: 2rem;
+		padding: 0.5rem;
+	}
+
+	.c-ratings-survey .c-forms__pictographic-radios {
+		gap: 1rem;
+	}
+
+	.c-ratings-survey .c-forms__label {
+		font-size: 0.875rem;
+	}
 }
 
 .c-ratings-survey .c-forms__fieldset--pictographic-radios {
@@ -78,4 +100,13 @@
 
 .c-ratings-survey .c-forms__fieldset {
 	margin: 0;
+}
+
+.c-ratings-survey .c-forms__error {
+	display: none;
+	margin-bottom: $global-ratings-survey-error-margin;
+}
+
+.c-ratings-survey--show-error .c-forms__error {
+	display: flex;
 }
