--- a/toolkits/global/packages/global-ratings-survey/view/ratingsSurvey.hbs
+++ b/toolkits/global/packages/global-ratings-survey/view/ratingsSurvey.hbs
@@ -11,9 +11,7 @@
 			<button class="c-ratings-survey__button" type="submit">Send feedback</button>
 			<div class="u-hide c-ratings-survey__submit-message" data-ratings-survey="submit-message">
 				<div>
-					<svg viewBox="0 0 20 20" aria-hidden="true" focusable="false">
-						<use xlink:href="{{iconUrl}}"></use>
-					</svg>
+					<svg xmlns="http://www.w3.org/2000/svg" id="i-circle-tick" viewBox="0 0 20 20" aria-hidden="true" focusable="false" fill="#00a79d"><path d="M10 0a10 10 0 1 0 0 20 10 10 0 0 0 0-20Z"/><path d="M15 5.5a1 1 0 0 0-.8.4l-5.4 6-3.1-2.6a1 1 0 0 0-1.5.1 1 1 0 0 0 .2 1.5l3.9 3.4c.4.3 1 .3 1.4-.1l6-7c.4-.4.4-1 0-1.5a1 1 0 0 0-.8-.2Z" fill="#fff"/></svg>
 					<p>{{submitMessageText}}</p>
 				</div>
 				{{#if questionUrl}}
