Uses starts with selector instead of contains

--- a/context/brand-context/default/scss/40-base/block-spacing.scss
+++ b/context/brand-context/default/scss/40-base/block-spacing.scss
@@ -3,7 +3,7 @@
 }
 
 :is(p, ol, ul, dl, figure, blockquote, form, pre, table, img, video, aside, section, article) + *,
-[class*="c-"]:not([class*="__"]) + * {
+[class^="c-"]:not([class*="__"]) + * {
 	margin-block-start: $tokens--typography-block-spacing-medium;
 }
 
