Temporarily fix the chevron size to override the value coming from this version of brand-context

--- a/toolkits/global/packages/global-breadcrumbs/scss/50-components/breadcrumbs.scss
+++ b/toolkits/global/packages/global-breadcrumbs/scss/50-components/breadcrumbs.scss
@@ -16,7 +16,9 @@
 	}
 }
 
-.c-breadcrumbs__chevron {
+svg.c-breadcrumbs__chevron {
 	margin: $breadcrumbs-chevron-spacing;
 	fill: $breadcrumbs-chevron-color;
+	width: 10px;
+	height: 10px;
 }
