--- a/toolkits/global/packages/global-forms/view/fields/globalFormRadios.hbs
+++ b/toolkits/global/packages/global-forms/view/fields/globalFormRadios.hbs
@@ -1,5 +1,5 @@
 {{#if inputs}}
-	<fieldset class="c-forms__fieldset c-forms__field c-forms__radios" {{#unless legend}}{{#unless label}} role="presentation"{{/unless}}{{/unless}} {{> globalFormAttributes}}>
+	<fieldset class="c-forms__fieldset c-forms__field c-forms__radios" {{> globalFormAttributes}}>
 		{{#if legend}}
 			<legend class="c-forms__label">{{legend}}<span class="c-form__label--visually-hidden">{{#if groupDescription}}. {{groupDescription}}{{/if}}</span></legend>
 		{{else}}
