--- a/context/brand-context/default/scss/00-tokens/_breakpoints.variables.scss
+++ b/context/brand-context/default/scss/00-tokens/_breakpoints.variables.scss
@@ -1,9 +1,9 @@
 
 // Do not edit directly
-// Generated on Thu, 15 Sep 2022 10:03:30 GMT
+// Generated on Thu, 13 Oct 2022 13:04:51 GMT
 
-$tokens--breakpoints-xs: 320px; // mobile
-$tokens--breakpoints-sm: 580px; // small tablet
-$tokens--breakpoints-md: 768px; // tablet
-$tokens--breakpoints-lg: 1024px; // small desktop
-$tokens--breakpoints-xl: 1220px; // desktop
+$tokens--breakpoints-xs: 320px;
+$tokens--breakpoints-sm: 580px;
+$tokens--breakpoints-md: 768px;
+$tokens--breakpoints-lg: 1024px;
+$tokens--breakpoints-xl: 1220px;
