--- a/context/brand-context/default/scss/00-tokens/_icon.variables.scss
+++ b/context/brand-context/default/scss/00-tokens/_icon.variables.scss
@@ -1,7 +1,7 @@
 
 // Do not edit directly
-// Generated on Thu, 15 Sep 2022 10:03:31 GMT
+// Generated on Thu, 13 Oct 2022 13:15:43 GMT
 
-$tokens--icon-checkbox-checked-stroke: #ffffff;
-$tokens--icon-checkbox-checked-fill: #01324b;
-$tokens--icon-select-stroke: #000000;
+$t-icon-checkbox-checked-stroke: #ffffff !default;
+$t-icon-checkbox-checked-fill: #01324b !default;
+$t-icon-select-stroke: #000000 !default;
