--- a/context/brand-context/default/scss/00-tokens/_button.variables.scss
+++ b/context/brand-context/default/scss/00-tokens/_button.variables.scss
@@ -1,8 +1,8 @@
 
 // Do not edit directly
-// Generated on Thu, 15 Sep 2022 10:03:31 GMT
+// Generated on Thu, 13 Oct 2022 13:15:43 GMT
 
-$tokens--button-background-primary-resting: #01324b;
-$tokens--button-background-primary-hover: #ffffff;
-$tokens--button-background-secondary-resting: #ffffff;
-$tokens--button-background-secondary-hover: #01324b;
+$t-button-background-primary-resting: #01324b !default;
+$t-button-background-primary-hover: #ffffff !default;
+$t-button-background-secondary-resting: #ffffff !default;
+$t-button-background-secondary-hover: #01324b !default;
