--- a/context/brand-context/default/scss/00-tokens/_link.variables.scss
+++ b/context/brand-context/default/scss/00-tokens/_link.variables.scss
@@ -1,8 +1,8 @@
 
 // Do not edit directly
-// Generated on Thu, 15 Sep 2022 10:03:31 GMT
+// Generated on Thu, 13 Oct 2022 13:15:43 GMT
 
-$tokens--link-color: #025e8d;
-$tokens--link-hover: #01324b;
-$tokens--link-visited: #01324b;
-$tokens--link-focus: #0088cc;
+$t-link-color: #025e8d !default;
+$t-link-hover: #01324b !default;
+$t-link-visited: #01324b !default;
+$t-link-focus: #0088cc !default;
