--- a/context/brand-context/default/scss/00-tokens/_state.variables.scss
+++ b/context/brand-context/default/scss/00-tokens/_state.variables.scss
@@ -1,9 +1,9 @@
 
 // Do not edit directly
-// Generated on Thu, 15 Sep 2022 10:03:31 GMT
+// Generated on Thu, 13 Oct 2022 13:15:43 GMT
 
-$tokens--state-focus: #ffcc00;
-$tokens--state-error: #c40606;
-$tokens--state-warning: #f58220;
-$tokens--state-success: #00a69d;
-$tokens--state-information: #000000;
+$t-state-focus: #ffcc00 !default;
+$t-state-error: #c40606 !default;
+$t-state-warning: #f58220 !default;
+$t-state-success: #00a69d !default;
+$t-state-information: #000000 !default;
