--- a/context/brand-context/default/scss/00-tokens/_text.variables.scss
+++ b/context/brand-context/default/scss/00-tokens/_text.variables.scss
@@ -1,7 +1,7 @@
 
 // Do not edit directly
-// Generated on Thu, 15 Sep 2022 10:03:31 GMT
+// Generated on Thu, 13 Oct 2022 13:15:43 GMT
 
-$tokens--text-primary: #000000;
-$tokens--text-secondary: #666666;
-$tokens--text-reversed: #ffffff;
+$t-text-primary: #000000 !default;
+$t-text-secondary: #666666 !default;
+$t-text-reversed: #ffffff !default;
