--- a/context/brand-context/springer/scss/00-tokens/_typography.variables.scss
+++ b/context/brand-context/springer/scss/00-tokens/_typography.variables.scss
@@ -1,22 +1,22 @@
 
 // Do not edit directly
-// Generated on Thu, 15 Sep 2022 10:03:31 GMT
+// Generated on Thu, 13 Oct 2022 13:15:43 GMT
 
-$tokens--typography-heading-font-family: serif;
-$tokens--typography-heading-letter-spacing: 0.2rem;
-$tokens--typography-heading-line-height: 1.2;
-$tokens--typography-heading-level-1-default-font-size: 2.5rem;
-$tokens--typography-heading-level-1-default-font-weight: 400;
-$tokens--typography-heading-level-1-fluid-font-size: clamp(1.875rem, 4vw, 2.5rem);
-$tokens--typography-heading-level-2-default-font-size: 1.875rem;
-$tokens--typography-heading-level-2-default-font-weight: 400;
-$tokens--typography-heading-level-2-fluid-font-size: clamp(1.5rem, 4vw, 1.875rem);
-$tokens--typography-heading-level-3-default-font-size: 1.5rem;
-$tokens--typography-heading-level-3-fluid-font-size: clamp(1.25rem, 4vw, 1.5rem);
-$tokens--typography-heading-level-4-font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
-$tokens--typography-heading-level-4-default-font-size: 1.25rem;
-$tokens--typography-heading-level-4-fluid-font-size: clamp(1.125rem, 4vw, 1.25rem);
-$tokens--typography-heading-level-4-font-weight: 700;
-$tokens--typography-heading-level-5-font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
-$tokens--typography-heading-level-5-font-size: 1.125rem;
-$tokens--typography-heading-level-5-font-weight: 700;
+$t-typography-heading-font-family: serif !default;
+$t-typography-heading-letter-spacing: 0.2rem !default;
+$t-typography-heading-line-height: 1.2 !default;
+$t-typography-heading-level-1-default-font-size: 2.5rem !default;
+$t-typography-heading-level-1-default-font-weight: 400 !default;
+$t-typography-heading-level-1-fluid-font-size: clamp(1.875rem, 4vw, 2.5rem) !default;
+$t-typography-heading-level-2-default-font-size: 1.875rem !default;
+$t-typography-heading-level-2-default-font-weight: 400 !default;
+$t-typography-heading-level-2-fluid-font-size: clamp(1.5rem, 4vw, 1.875rem) !default;
+$t-typography-heading-level-3-default-font-size: 1.5rem !default;
+$t-typography-heading-level-3-fluid-font-size: clamp(1.25rem, 4vw, 1.5rem) !default;
+$t-typography-heading-level-4-font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif !default;
+$t-typography-heading-level-4-default-font-size: 1.25rem !default;
+$t-typography-heading-level-4-fluid-font-size: clamp(1.125rem, 4vw, 1.25rem) !default;
+$t-typography-heading-level-4-font-weight: 700 !default;
+$t-typography-heading-level-5-font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif !default;
+$t-typography-heading-level-5-font-size: 1.125rem !default;
+$t-typography-heading-level-5-font-weight: 700 !default;
