Adds all styling values to component design tokens

--- a/toolkits/global/packages/global-ratings-survey/scss/00-tokens/_default.tokens.scss
+++ b/toolkits/global/packages/global-ratings-survey/scss/00-tokens/_default.tokens.scss
@@ -1,4 +1,4 @@
-// Generated on 10/5/2022, 2:08:32 PM
+// Generated on 10/13/2022, 2:34:22 PM
 // Source: design-tokens/componenets/global/global-ratings-survey/default.json
 // DO NOT edit directly
 
@@ -8,8 +8,19 @@ $global-ratings-survey-error-margin: .5rem;
 $global-ratings-survey-heading-font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
 $global-ratings-survey-heading-font-size: 1rem;
 $global-ratings-survey-heading-font-weight: 700;
-$global-ratings-survey-heading-margin: 1rem;
-$global-ratings-survey-icon-margin: .5rem;
-$global-ratings-survey-icon-size: 1.5rem;
+$global-ratings-survey-heading-margin: .5rem;
 $global-ratings-survey-line-height: 1.4;
+$global-ratings-survey-link-font-size: 1rem;
 $global-ratings-survey-link-margin: .5rem;
+$global-ratings-survey-message-font-size: 1rem;
+$global-ratings-survey-message-icon-margin: .5rem;
+$global-ratings-survey-message-icon-size: 1.5rem;
+$global-ratings-survey-radio-icon-border-radius: 2px;
+$global-ratings-survey-radio-icon-size-desktop: 1.5rem;
+$global-ratings-survey-radio-icon-size-narrow: 1.3rem;
+$global-ratings-survey-radio-icon-spacing-desktop: .5rem;
+$global-ratings-survey-radio-icon-spacing-narrow: 0.3rem;
+$global-ratings-survey-radio-label-font-size-desktop: 0.875rem;
+$global-ratings-survey-radio-label-font-size-narrow: 0.7rem;
+$global-ratings-survey-radio-spacing-desktop: 1rem;
+$global-ratings-survey-radio-spacing-narrow: 0.45rem;
