--- a/toolkits/global/packages/global-ratings-survey/scss/30-mixins/_ratings-survey-button.scss
+++ b/toolkits/global/packages/global-ratings-survey/scss/30-mixins/_ratings-survey-button.scss
@@ -1,3 +1,5 @@
+// October 2022: Temporary mixin, to be removed once button styles in Elements have been refactored. Unable to use existing button styles in Elements because there is not one type of button that is satisfactory across all imprints for this component.
+
 @mixin global-ratings-survey-button {
 	position: relative;
 	display: flex;
