--- a/toolkits/global/packages/global-ratings-survey/scss/30-mixins/_ratings-survey-button.scss
+++ b/toolkits/global/packages/global-ratings-survey/scss/30-mixins/_ratings-survey-button.scss
@@ -11,7 +11,7 @@
 	box-shadow: 0 0 0 1px #01324b;
 	color: #01324b;
 	cursor: pointer;
-	font-size: 0.875rem;
+	font-size: 14px;
 	font-weight: 700;
 	line-height: 1.3;
 	margin: 16px 0 0 0;
