Removes iconUrl data property from demo context.json

--- a/toolkits/global/packages/global-ratings-survey/scss/00-tokens/_default.tokens.scss
+++ b/toolkits/global/packages/global-ratings-survey/scss/00-tokens/_default.tokens.scss
@@ -1,4 +1,4 @@
-// Generated on 10/14/2022, 4:14:06 PM
+// Generated on 10/17/2022, 9:38:41 AM
 // Source: design-tokens/componenets/global/global-ratings-survey/default.json
 // DO NOT edit directly
 
