--- a/toolkits/global/packages/global-ratings-survey/scss/50-components/_ratings-survey.scss
+++ b/toolkits/global/packages/global-ratings-survey/scss/50-components/_ratings-survey.scss
@@ -10,7 +10,11 @@
 	justify-content: center;
 }
 
-.c-ratings-survey__heading {
+// Specificity score increased to ensure overrides heading styles on all of our imprint sites
+.c-ratings-survey h1.c-ratings-survey__heading,
+.c-ratings-survey h2.c-ratings-survey__heading,
+.c-ratings-survey h3.c-ratings-survey__heading,
+.c-ratings-survey h4.c-ratings-survey__heading {
 	margin: 0 0 $global-ratings-survey-heading-margin;
 	font-family: inherit;
 	font-size: $global-ratings-survey-heading-font-size;
