Uses negative margin technique to pull out contents on narrow which allows for more sensible font,spacing and sizing values

--- a/toolkits/global/packages/global-ratings-survey/scss/00-tokens/_default.tokens.scss
+++ b/toolkits/global/packages/global-ratings-survey/scss/00-tokens/_default.tokens.scss
@@ -1,4 +1,4 @@
-// Generated on 10/17/2022, 10:18:14 AM
+// Generated on 10/17/2022, 12:31:57 PM
 // Source: design-tokens/componenets/global/global-ratings-survey/default.json
 // DO NOT edit directly
 
@@ -17,10 +17,10 @@ $global-ratings-survey-message-icon-margin: 8px;
 $global-ratings-survey-message-icon-size: 24px;
 $global-ratings-survey-radio-icon-border-radius: 2px;
 $global-ratings-survey-radio-icon-size-desktop: 24px;
-$global-ratings-survey-radio-icon-size-narrow: 20.8px;
+$global-ratings-survey-radio-icon-size-narrow: 21px;
 $global-ratings-survey-radio-icon-spacing-desktop: 8px;
-$global-ratings-survey-radio-icon-spacing-narrow: 4.8px;
+$global-ratings-survey-radio-icon-spacing-narrow: 6px;
 $global-ratings-survey-radio-label-font-size-desktop: 14px;
-$global-ratings-survey-radio-label-font-size-narrow: 11.2px;
+$global-ratings-survey-radio-label-font-size-narrow: 12px;
 $global-ratings-survey-radio-spacing-desktop: 16px;
-$global-ratings-survey-radio-spacing-narrow: 7.2px;
+$global-ratings-survey-radio-spacing-narrow: 8px;
