--- a/context/brand-context/default/scss/40-base/block-spacing.scss
+++ b/context/brand-context/default/scss/40-base/block-spacing.scss
@@ -2,8 +2,8 @@
 	margin-block: 0;
 }
 
-:is(p, ol, ul, dl, figure, blockquote, form, pre, table, img, video, aside, section, article) + *,
-[class^="c-"]:not([class*="__"]) + * {
+:is(p, ol, ul, dl, figure, blockquote, form, pre, table, img, video, aside, section, article) +
+:is(p, ol, ul, dl, figure, blockquote, form, pre, table, img, video, aside, section, article) {
 	margin-block-start: $tokens--typography-block-spacing-medium;
 }
 
@@ -21,4 +21,11 @@ h2 + * {
 
 h1 + * {
 	margin-block-start: $tokens--typography-block-spacing-x-large;
+}
+
+/* Not applicable after hidden elements */
+[hidden] + *,
+[style*="display:none"] + *,
+[style*="display: none"] + * {
+	margin-block-start: 0;
 }
