--- a/context/brand-context/default/scss/40-base/block-spacing.scss
+++ b/context/brand-context/default/scss/40-base/block-spacing.scss
@@ -2,16 +2,23 @@
 	margin-block: 0;
 }
 
+// Arbitrary semantic elements are likely to be CMS generated and need default margin applied.
+// The specificity is that of one element selector.
 :is(p, ol, ul, dl, figure, blockquote, form, pre, table, img, video, aside, section, article) +
 :is(p, ol, ul, dl, figure, blockquote, form, pre, table, img, video, aside, section, article) {
 	margin-block-start: $tokens--typography-block-spacing-medium;
 }
 
+// <div> elements found among semantic content likely need similar margin applied.
+// The specificity is that of two element selectors; utility classes can override
 :is(p, ol, ul, dl, figure, blockquote, pre, table, img, video) + div,
 div + :is(p, ol, ul, dl, figure, blockquote, pre, table, img, video) {
 	margin-block-start: $tokens--typography-block-spacing-medium;
 }
 
+// Headings have differing margins to other flow elements.
+// No matter the type of sibling elements, these margins should be applied.
+// The specificity is equal to one element selector
 * + :is(h2, h3, h4, h5) {
 	margin-block-start: $tokens--typography-block-spacing-large;
 }
@@ -28,9 +35,10 @@ h1 + * {
 	margin-block-start: $tokens--typography-block-spacing-x-large;
 }
 
-/* Not applicable after hidden elements */
-[hidden] + *,
-[style*="display:none"] + *,
-[style*="display: none"] + * {
+// Remove margin applied to hidden first-child elements.
+// Otherwise redundant margin appear at the top of the container.
+[hidden]:first-child + *,
+[style*="display:none"]:first-child + *,
+[style*="display: none"]:first-child + * {
 	margin-block-start: 0;
 }
