--- a/context/brand-context/default/scss/30-mixins/lists.scss
+++ b/context/brand-context/default/scss/30-mixins/lists.scss
@@ -1,3 +1,11 @@
+@mixin u-list-dash {
+	> ::marker {
+		content: '– ';
+		font-size: 1.2em;
+		line-height: 1;
+	}
+}
+
 @mixin u-list-reset {
 	list-style: none;
 	margin: 0;
