--- a/context/brand-context/default/scss/60-utilities/lists.scss
+++ b/context/brand-context/default/scss/60-utilities/lists.scss
@@ -6,6 +6,10 @@
 	list-style-type: disc;
 }
 
+.u-list-style-dash > ::marker {
+	@include u-list-dash;
+}
+
 .u-list-style-none {
 	list-style-type: none;
 }
